--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - /opt/djpmcds/files/fieldforms:/opt/djpmcds/files/fieldforms
       - /opt/djpmcds/files/dataspecs:/opt/djpmcds/files/dataspecs
       - /opt/djpmcds/files/downloads:/opt/djpmcds/files/downloads
+      - /opt/djpmcds/static:/opt/djpmcds/static
       - /opt/djpmcds/socket:/opt/djpmcds/socket
       - /opt/djpmcds/logs:/opt/djpmcds/logs
     ports:
